crates/rome_formatter/tests/specs/prettier/decorators/classes.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: classes.js

---
# Input
```js
@deco class Foo {}

@deco export class Bar {}

@deco export default class Baz {}

const foo = @deco class {
  //
};

const bar =
  @deco
  class {
    //
  };

```

# Output
```js
@deco 
class Foo {}



@deco 
export class Bar {}



@deco 
export default class Baz {}

const foo =
@deco 
class {
  //
}

const bar =

  @deco
class {
    //
  }

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '@deco'
  ┌─ classes.js:1:1
  │
1 │ @deco class Foo {}
  │ ^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '@deco'
  ┌─ classes.js:3:1
  │
3 │ @deco export class Bar {}
  │ ^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '@deco'
  ┌─ classes.js:5:1
  │
5 │ @deco export default class Baz {}
  │ ^^^^^ Expected a statement here

error[SyntaxError]: expected an expression, or an assignment but instead found '@'
  ┌─ classes.js:7:13
  │
7 │ const foo = @deco class {
  │             ^ Expected an expression, or an assignment here

error[SyntaxError]: class declarations must have a name
  ┌─ classes.js:7:19
  │
7 │ const foo = @deco class {
  │                   ^^^^^^

error[SyntaxError]: expected an expression, or an assignment but instead found '@'
   ┌─ classes.js:12:3
   │
12 │   @deco
   │   ^ Expected an expression, or an assignment here

error[SyntaxError]: class declarations must have a name
   ┌─ classes.js:13:3
   │
13 │   class {
   │   ^^^^^^


```


